--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
         <div class="logo">
           <img src="images/logo.png" alt="logo" />
         </div>
+        <div class="hamburger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
         <div class="menu-navbar">
           <ul class="links">
             <li class="link">
-              <a href="#">Home</a>
+              <a href="#" class="active">Home</a>
             </li>
             <li class="link">
               <a href="#project">Project</a>
@@ -30,7 +35,7 @@
           </ul>
         </div>
       </nav>
-      <!-- -------------------banner------------------------ -->
+      <!-- -------------------banner------------------------g -->
       <div class="banner">
         <div class="section-banner"> 
           <div class="bg-options">
