--- a/index.html
+++ b/index.html
@@ -61,33 +61,36 @@
         <h1 class="h1title">Projects</h1>
         <div class="projects">
           <div class="card">
-            <img src="images/projects/clayedu.png" alt="Placeholder Image">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lobortis nibh quis urna pretium, at posuere nulla blandit. Sed sed vulputate velit. Nullam nec nisl ante.</p>
+            <a href="https://tifana.github.io/clayedu.github.io/" target="_blank">
+              <img src="images/projects/clayedu1.png" alt="Placeholder Image">
+            </a>
+            <h2 class="card-h2">Clay Edu</h2>
+            <p>Clay edu is a landing page website of an education institution -not real-. I built this page using HTML, CSS and Javascript. with a message feature where the user can send an email directly from this website.</p>
             <div class="tags">
               <p class="tag">HTML</p>
               <p class="tag">CSS</p>
               <p class="tag">Javascript</p>
             </div>
           </div>
-          <div class="card">
-            <img src="images/projects/clayedu.png" alt="Placeholder Image">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lobortis nibh quis urna pretium, at posuere nulla blandit. Sed sed vulputate velit. Nullam nec nisl ante.</p>
+          <div class="card" >
+            <a href="https://tifana.github.io/fe-mentor-prod-preview-card/" target="_blank">
+              <img src="images/projects/fe-prodCard.JPG" alt="Placeholder Image">
+            </a>
+            <h2>Card Preview</h2>
+            <p>This is my taken-on the project from Front End Mentor, Responsive product preview card components. I built this simple project using HTML and CSS</p>
             <div class="tags">
               <p class="tag">HTML</p>
               <p class="tag">CSS</p>
-              <p class="tag">Javascript</p>
             </div>
           </div>
           <div class="card">
-            <img src="images/projects/clayedu.png" alt="Placeholder Image">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lobortis nibh quis urna pretium, at posuere nulla blandit. Sed sed vulputate velit. Nullam nec nisl ante.</p>
+            <a href="https://github.com/Tifana/fe_mentor_interactive_rating_component" target="_blank">
+              <img src="images/projects/fe-rating-react.JPG" alt="Placeholder Image">
+            </a>
+            <h2>Interactive rating</h2>
+            <p>This is my second project challenge from Front End Mentor, Interactive rating components. I built this using React JS. This project consist of two card components where the user can give a rating and will be directed to thank you card</p>
             <div class="tags">
-              <p class="tag">HTML</p>
-              <p class="tag">CSS</p>
-              <p class="tag">Javascript</p>
+              <p class="tag">ReactJs</p>
             </div>
           </div> 
         </div>
@@ -103,9 +106,10 @@
         <h1 class="h1title">About Me</h1>
         <div class="description">
           <img src="images/myLinkedinPic.jpg" alt="">
-          <p class="aboutMe">My first introduction to Web development when I participate in Javascript crash course by Women Techmaker Berlin. After that, I completed my intensive web development bootcamp by Le Wagon in late 2020. I have been working as a freelance web developer for the last two years. I create and maintain websites. I keep improving my knowledge and skills by buildng various web applications using the latest technology/frameworks. 
+          <p class="aboutMe">My first introduction to Web development when I participate in Javascript crash course by Women Techmaker Berlin. After that, I completed my intensive web development bootcamp by Le Wagon in late 2020. I have been working as a freelance web developer for the last two years where I create and maintain websites. I keep improving my knowledge and skills by buildng various web applications using the latest technology/frameworks. 
           <br>
-          I'm passionate about women empowerment and education. Therefore, I am actively volunteering in organisations that share the same values. I'm passionate about women empowerment and education. Therefore, I am actively volunteering in organisations that share the same values. </p>
+          <br>
+          I'm passionate about women empowerment and education. Therefore, I am actively volunteering in organisations that share the same values. For more information about me and my projects please contact me on some links below.  </p>
           <div class="social-media">
             <ul>
               <li>
