remove / on the images

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           </div>
         </div>
         <div class="section-banner skills">
-          <img class="skill" src="/images/html-5.png" alt="html">
-          <img class="skill" src="/images/css-3.png" alt="css">
+          <img class="skill" src="images/html-5.png" alt="html">
+          <img class="skill" src="images/css-3.png" alt="css">
           <img class="skill smaller" src="images/js.png" alt="javascript">
           <img class="skill" src="images/react.png" alt="react">
           <img class="skill smaller" src="images/ruby.png" alt="ruby">
