--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <img src="images/projects/clayedu1.png" alt="Placeholder Image">
             </a>
             <h2 class="card-h2">Clay Edu</h2>
-            <p>Clay edu is a landing page website of an education institution -not real-. I built this page using HTML, CSS and Javascript. with a message feature where the user can send an email directly from this website.</p>
+            <p>Clay Edu is a landing page website for an educational institution (fictional). I constructed this page using HTML, CSS, and JavaScript. One of the notable features of the website is a messaging functionality, allowing users to send emails directly from the site itself..</p>
             <div class="tags">
               <p class="tag">HTML</p>
               <p class="tag">CSS</p>
@@ -77,7 +77,7 @@
               <img src="images/projects/fe-prodCard.JPG" alt="Placeholder Image">
             </a>
             <h2>Card Preview</h2>
-            <p>This is my taken-on the project from Front End Mentor, Responsive product preview card components. I built this simple project using HTML and CSS</p>
+            <p>I have taken on a project from Front End Mentor called "Responsive Product Preview Card Components." For this project, I utilized HTML and CSS to create a simple and interactive card that displays product previews in a responsive manner.</p>
             <div class="tags">
               <p class="tag">HTML</p>
               <p class="tag">CSS</p>
@@ -88,7 +88,7 @@
               <img src="images/projects/fe-rating-react.JPG" alt="Placeholder Image">
             </a>
             <h2>Interactive rating</h2>
-            <p>This is my second project challenge from Front End Mentor, Interactive rating components. I built this using React JS. This project consist of two card components where the user can give a rating and will be directed to thank you card</p>
+            <p>This is my second project challenge from Front End Mentor, called "Interactive Rating Components." I developed it using React JS. The project consists of two card components where users can provide ratings and will then be directed to a thank you card.</p>
             <div class="tags">
               <p class="tag">ReactJs</p>
             </div>
@@ -106,10 +106,10 @@
         <h1 class="h1title">About Me</h1>
         <div class="description">
           <img src="images/myLinkedinPic.jpg" alt="">
-          <p class="aboutMe">My first introduction to Web development when I participate in Javascript crash course by Women Techmaker Berlin. After that, I completed my intensive web development bootcamp by Le Wagon in late 2020. I have been working as a freelance web developer for the last two years where I create and maintain websites. I keep improving my knowledge and skills by buildng various web applications using the latest technology/frameworks. 
+          <p class="aboutMe">My first introduction to web development was when I participated in the JavaScript crash course by Women Techmaker Berlin. Following that, I successfully completed an intensive web development bootcamp by Le Wagon in late 2020. Over the past two years, I have been working as a freelance web developer, creating and maintaining websites. I continuously enhance my knowledge and skills by building various web applications using the latest technologies and frameworks.
           <br>
           <br>
-          I'm passionate about women empowerment and education. Therefore, I am actively volunteering in organisations that share the same values. For more information about me and my projects please contact me on some links below.  </p>
+          I am deeply passionate about women empowerment and education, which is why I actively volunteer in organizations that share the same values. For more information about me and my projects, please feel free to contact me through the links provided below.</p>
           <div class="social-media">
             <ul>
               <li>
