--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="#" class="active">Home</a>
             </li>
             <li class="link">
-              <a href="#project">Project</a>
+              <a href="#project">Projects</a>
             </li>
             <li class="link"><a href="#about">About</a></li>
             <li class="link">
@@ -157,7 +157,7 @@
           </div>
           <div class="download">
             <h3>FreeCodeCamp</h3>
-            <a href="downloadDocs/Resume_Tifana_Rosa_Taftazani.pdf" download>
+            <a href="downloadDocs/freecodecamp_certificate.pdf" download>
             <img src="images/documents/certificate.png" alt="resume">
           </a>
         </div>  
