adding link to react project

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="card">
-            <a href="https://github.com/Tifana/fe_mentor_interactive_rating_component" target="_blank">
+            <a href="https://tifana.github.io/fe_mentor_interactive_rating_component/" target="_blank">
               <img src="images/projects/fe-rating-react.JPG" alt="Placeholder Image">
             </a>
             <h2>Interactive rating</h2>
