--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
       <!-- ----------------------------Documents---------------------------------- -->
       <div class="documents" id="documents">
         <h1 class="h1title">Documents</h1>
-        <p>Want to know more about me? Feel free to download my resume and certificates bellow </p>
+        <p>Want to know more about me? Feel free to download my resume and certificates below </p>
         <hr>
         <div class="download-wrapper">
           <div class="download">
             <h3>Resume</h3>
-            <a href="downloadDocs/Resume_Tifana_Rosa_Taftazani.pdf" download>
+            <a href="downloadDocs/Tifana Rosa Taftazani CV Resume.pdf" download>
             <img src="images/documents/file.png" alt="resume">
           </a>
           </div>
