--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="download-wrapper">
           <div class="download">
             <h3>Resume</h3>
-            <a href="downloadDocs/Tifana Rosa Taftazani CV Resume.pdf" download>
+            <a href="downloadDocs/CV-Tifana Rosa Taftazani.pdf" download>
             <img src="images/documents/file.png" alt="resume">
           </a>
           </div>
